# dragonLink_gps_osm_display

dragonLinkSerial/: dragonLinkSerial.pro  main.cpp
dragonlink transmitter/gps_serial_transmit/: CMakeLists.txt  main.cpp  qserial_test.cpp
qt_osm/mapDisplayDynamic/: circlecontroller.h  main.cpp  main.qml  mapDisplayDynamic.pro
